force-app/main/default/objects/ddcdf__Scan__c/ddcdf__Scan__c.object-meta.xml
<CustomObject>
    <description>It represents a scan for data.com matches.</description>
    <label>Scan</label>
    <nameField>
        <label>Scan Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Scans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>