force-app/main/default/objects/ddcdf__Scan__c/fields/ddcdf__End_Date__c.field-meta.xml
<CustomField>
    <fullName>ddcdf__End_Date__c</fullName>
    <description>The date and time the scan actually ended processing.</description>
    <inlineHelpText>The date and time the scan actually ended processing.</inlineHelpText>
    <label>End Date</label>
    <type>DateTime</type>
</CustomField>