force-app/main/default/objects/ddcdf__Scan__c/fields/ddcdf__Log__c.field-meta.xml
<CustomField>
    <fullName>ddcdf__Log__c</fullName>
    <description>A compiled log of messages saved during the scanning process. Intended to inform administrators and developers about key events in the scanning process to support debugging.</description>
    <inlineHelpText>A compiled log of messages saved during the scanning process. Intended to inform administrators and developers about key events in the scanning process to support debugging.</inlineHelpText>
    <label>Log</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>