force-app/main/default/objects/ddcdf__Scan__c/fields/ddcdf__Matches_Total__c.field-meta.xml
<CustomField>
    <fullName>ddcdf__Matches_Total__c</fullName>
    <description>The total number of dependencies identified during this scan.</description>
    <inlineHelpText>The total number of dependencies identified during this scan.</inlineHelpText>
    <label>Matches Total</label>
    <summaryForeignKey>ddcdf__Dependency__c.ddcdf__Scan__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>