force-app/main/default/objects/ddcdf__Scan__c/fields/ddcdf__Metadata_Class__c.field-meta.xml
<CustomField>
    <fullName>ddcdf__Metadata_Class__c</fullName>
    <label>Metadata Class</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Scanning</fullName>
                <default>true</default>
                <label>Scanning</label>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>