force-app/main/default/objects/ddcdf__Scan__c/fields/ddcdf__Number__c.field-meta.xml
<CustomField>
    <fullName>ddcdf__Number__c</fullName>
    <description>A simple counter as multiple scans may be run in an instance.</description>
    <displayFormat>SCAN-{000}</displayFormat>
    <externalId>true</externalId>
    <inlineHelpText>A simple counter as multiple scans may be run in an instance.</inlineHelpText>
    <label>Number</label>
    <type>AutoNumber</type>
</CustomField>