force-app/main/default/objects/ddcdf__Scan__c/fields/ddcdf__Start_Date__c.field-meta.xml
<CustomField>
    <fullName>ddcdf__Start_Date__c</fullName>
    <description>The date and time the scan actually started processing.</description>
    <inlineHelpText>The date and time the scan actually started processing.</inlineHelpText>
    <label>Start Date</label>
    <type>DateTime</type>
</CustomField>