force-app/main/default/objects/ddcdf__Scan__c/fields/ddcdf__Total_Integration_Rules__c.field-meta.xml
<CustomField>
    <fullName>ddcdf__Total_Integration_Rules__c</fullName>
    <label>Total Integration Rules</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>