force-app/main/default/objects/ddcdf__Scan__c/fields/ddcdf__Total_Reports__c.field-meta.xml
<CustomField>
    <fullName>ddcdf__Total_Reports__c</fullName>
    <description>That have been run in the past year</description>
    <inlineHelpText>That have been run in the past year</inlineHelpText>
    <label>Total Reports</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>