force-app/main/default/objects/ddcdf__Scan__c/listViews/ddcdf__All.listView-meta.xml
<ListView>
    <fullName>ddcdf__All</fullName>
    <columns>NAME</columns>
    <columns>ddcdf__Number__c</columns>
    <columns>ddcdf__Start_Date__c</columns>
    <columns>ddcdf__Status__c</columns>
    <columns>ddcdf__Include_in_Export_Report__c</columns>
    <columns>ddcdf__Scan_Time__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>